<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recycler_3"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_background_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:alpha=".5"
        android:src="@drawable/img_no_trip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fullNameTxt"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:background="#F3B7EB"
        android:backgroundTint="#00000000"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="100dp"
        android:background="#F3B7EB"
        android:backgroundTint="#00000000"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/emailtxt"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ageTxt"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:background="#F3B7EB"
        android:backgroundTint="#00000000"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTxt"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:background="#F3B7EB"
        android:backgroundTint="#00000000"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/ageTxt"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirmPasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:background="#F3B7EB"
        android:backgroundTint="#00000000"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/confirm_password"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="341dp"
        android:layout_height="75dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/action_register"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>