<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ExpenseActivity">

    <TextView
        android:id="@+id/tv_triptype_title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/trip_recommended_destination"
        android:textColor="@color/white"
        app:drawableLeftCompat="@android:drawable/ic_menu_myplaces"
        app:layout_constraintStart_toStartOf="@+id/tv_triptype_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_triptype_title" />

    <TextView
        android:id="@+id/tv_trip_necessary_stuff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"


        app:layout_constraintBottom_toBottomOf="@+id/tv_triptype_title4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintStart_toEndOf="@id/tv_triptype_title"
        app:layout_constraintTop_toTopOf="@+id/tv_triptype_title4"
        tools:text="sample text" />

    <TextView
        android:id="@+id/tv_triptype_title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/trip_necessary_stuff"
        android:textColor="@color/white"
        app:drawableLeftCompat="@android:drawable/btn_star_big_on"
        app:layout_constraintStart_toStartOf="@+id/tv_date_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_info" />

    <TextView
        android:id="@+id/tv_triptype_info4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_triptype_title"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_triptype_title"
        app:layout_constraintTop_toTopOf="@id/tv_triptype_title"

        tools:text="sample text" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_trip_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_variablefont_wght"
        android:text="@string/trip_info"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_btn" />

    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/trip_name"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_baseline_subtitles_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_trip_info_title" />

    <TextView
        android:id="@+id/tv_name_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_name_title"
        app:layout_constraintTop_toTopOf="@id/tv_name_title"
        tools:text="sample text" />

    <TextView
        android:id="@+id/tv_destination_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/destination_cap"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_baseline_place_24"
        app:layout_constraintStart_toStartOf="@id/tv_name_title"
        app:layout_constraintTop_toBottomOf="@id/tv_name_title" />

    <TextView
        android:id="@+id/tv_destination_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_destination_title"
        app:layout_constraintTop_toBottomOf="@id/tv_destination_title"
        tools:text="sample text" />

    <TextView
        android:id="@+id/tv_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/date_cap"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintStart_toStartOf="@id/tv_destination_title"
        app:layout_constraintTop_toBottomOf="@id/tv_destination_info" />


    <TextView
        android:id="@+id/tv_date_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_date_title"
        app:layout_constraintStart_toEndOf="@id/tv_date_title"
        app:layout_constraintTop_toTopOf="@id/tv_date_title"
        tools:text="sample text" />

    <TextView
        android:id="@+id/tv_risk_assessment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/risk_assessment_cap"
        android:textColor="@color/white"
        app:drawableLeftCompat="@android:drawable/stat_notify_error"
        app:layout_constraintBottom_toBottomOf="@id/tv_date_title"
        app:layout_constraintStart_toEndOf="@id/tv_date_info"
        app:layout_constraintTop_toTopOf="@id/tv_date_title" />

    <TextView
        android:id="@+id/tv_risk_assessment_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_risk_assessment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_risk_assessment_title"
        app:layout_constraintTop_toTopOf="@id/tv_risk_assessment_title"
        tools:text="sample text" />

    <TextView
        android:id="@+id/tv_triptype_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/trip_weather_condition_cap"
        android:textColor="@color/white"
        app:drawableLeftCompat="@android:drawable/ic_menu_crop"
        app:layout_constraintStart_toStartOf="@+id/tv_triptype_title4"
        app:layout_constraintTop_toBottomOf="@+id/tv_triptype_title4" />

    <TextView
        android:id="@+id/tv_weather_condition_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintBottom_toBottomOf="@id/tv_triptype_title"
        app:layout_constraintStart_toEndOf="@id/tv_triptype_title"
        app:layout_constraintTop_toTopOf="@id/tv_triptype_title"

        tools:text="sample text" />

    <TextView
        android:id="@+id/tv_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/description_cap"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_baseline_description_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rd_info" />

    <TextView
        android:id="@+id/tv_description_info"
        android:layout_width="335dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="@+id/tv_description_title"
        app:layout_constraintTop_toBottomOf="@id/tv_description_title"
        tools:text="sample text" />

    <TextView
        android:id="@+id/tv_expense_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_variablefont_wght"
        android:text="@string/expense"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description_info" />

    <TextView
        android:id="@+id/expense_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/add_an_expense_no_cap"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_expense_title"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expense_list_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_expense_title" />

    <TextView
        android:id="@+id/tv_rd_info"
        android:layout_width="332dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/tv_triptype_title6"
        tools:layout_editor_absoluteX="46dp" />

</androidx.constraintlayout.widget.ConstraintLayout>